Fix map overflow on text boxes

--- a/cosinnus/static/less/map.less
+++ b/cosinnus/static/less/map.less
@@ -59,6 +59,13 @@
             .description {
                 margin: 5px 0 0 0;
                 color: #333;
+                
+                text-overflow: ellipsis;
+                overflow: hidden;
+                max-height: 20em;
+                -webkit-line-clamp: 15;
+                -webkit-box-orient: vertical;
+                display: -webkit-box;
             }
         }
     }
